[gd_scene load_steps=3 format=3 uid="uid://bvmw7n8qkx3hs"]

[ext_resource type="Script" uid="uid://bdc3w52pj4moe" path="res://MainMenu.gd" id="1_x7m2p"]
[ext_resource type="PackedScene" uid="uid://cwhqvnby7bxj7" path="res://Player.tscn" id="2_eiy7p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x7m2p")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(640, 360)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-119, -175)
amount = 100
lifetime = 15.0
direction = Vector2(0, 1)
gravity = Vector2(0, 20)
initial_velocity_min = 10.0
initial_velocity_max = 30.0

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="Stars" type="CPUParticles2D" parent="Background"]
position = Vector2(640, 360)
amount = 150
lifetime = 30.0
preprocess = 15.0
emission_shape = 3
emission_rect_extents = Vector2(640, 360)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 15.0
scale_amount_max = 3.0
color = Color(1, 1, 1, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 72
text = "SPACE SHOOTER BETA"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 1.5, 1.5, 1)
theme_override_font_sizes/font_size = 36
text = "‚ñ∂ PLAY SOLO"

[node name="OnlineButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_colors/font_hover_color = Color(0.5, 1.5, 0.5, 1)
theme_override_font_sizes/font_size = 36
text = "üåê ONLINE PLAY"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 1.5, 1.5, 1)
theme_override_font_sizes/font_size = 36
text = "‚öô SETTINGS"

[node name="MapsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 1.5, 1.5, 1)
theme_override_font_sizes/font_size = 36
text = "üó∫ MAPS (7)"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_colors/font_hover_color = Color(1.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 36
text = "‚úñ QUIT"

[node name="Credits" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 0.8)
theme_override_font_sizes/font_size = 16
text = "A Game by NEXO GAMES"
horizontal_alignment = 1

[node name="Controls" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 240.0
offset_right = 200.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Controls:
WASD/Arrows - Move
Space/Click - Shoot"
horizontal_alignment = 1

[node name="WaveLabel" type="Label" parent="."]
custom_minimum_size = Vector2(20, 60)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Wave: 1"

[node name="Gamertimer" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="WaveTransitionLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="DifficultyLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="PausePanel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Player" parent="." instance=ExtResource("2_eiy7p")]

[node name="PausePanel2" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LoginScreen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GuestTab" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="LoginTab" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="LoginTab"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="LoginTab/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="LoginTab/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="LoginTab/VBoxContainer"]
layout_mode = 2

[node name="SignupTab" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ForgotTab" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OnlineButton" to="." method="_on_online_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MapsButton" to="." method="_on_maps_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
